# c-calculator

./: CMakeLists.txt
src/: main.c
